# libdemi

./: .editorconfig  LICENSE  README.md  libdemi.sym  meson.build  meson_options.txt
include/: demi.h  demi_enums.h  evdev.h  linux.h  meson.build  netbsd.h  udev.h  wscons.h
src/: evdev.c  evdev.h  meson.build  wscons.c  wscons.h
src/freebsd/: demi.c  demi_internal.h  demi_structs.h  device.c  device.h  enumerate.c  meson.build  monitor.c
src/linux/: context.c  demi.c  demi_internal.h  demi_structs.h  device.c  device.h  enumerate.c  meson.build  monitor.c
src/netbsd/: context.c  demi.c  demi_internal.h  demi_structs.h  device.c  device.h  enumerate.c  meson.build  monitor.c
src/openbsd/: demi.c  meson.build
src/udev/: context.c  demi_structs.h  device.c  device.h  enumerate.c  meson.build  monitor.c
